hphp/test/quick/function_pointer/function_option_off.php.expectf
Fatal error: Function pointers are not enabled. in %s/test/quick/function_pointer/function_option_off.php on line 5
